There shalt be fire

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -38,6 +38,11 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>de.pesse.gwt.jsinterop.threejs</groupId>
+  			<artifactId>jsinterop-threejs-volumetricfire</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-servlet</artifactId>
 			<scope>runtime</scope>
